# erd-yaml2dot

./: .gitignore  README.md  pyproject.toml
__wip/: Playground.ipynb  diagram.erd.dot  diagram.erd.yml  diagram.viz  er_diag_yml_to_viz.py  setup.py
erd_yaml2dot/: __init__.py  core.py  format.py  main.py  style.py  utility.py  validate.py
erd_yaml2dot/resources/: erd_schema.yaml
erd_yaml2dot/resources/schemas/: erd_schema.yaml  style_schema.yaml
erd_yaml2dot/resources/styles/: default.yaml  style_schema.yaml
tests/: test_core.py  test_schema.py
tests/resources/: test_diagram.yaml
